2011-06-07  Rob Buis  <rbuis@rim.com>

Reviewed by Dirk Schulze.

        stroke-dasharray does not handle "none"
        https://bugs.webkit.org/show_bug.cgi?id=62203

        Test stroke-dasharray=none as well as invalid syntaxes.

        * platform/mac/svg/W3C-SVG-1.1-SE/styling-css-04-f-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/styling-css-04-f-expected.txt: Added.
        * platform/mac/svg/W3C-SVG-1.1/styling-css-04-f-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/styling-css-04-f-expected.txt:
        * platform/mac/svg/custom/invalid-dasharray-expected.png: Added.
        * platform/mac/svg/custom/invalid-dasharray-expected.txt: Added.
        * svg/W3C-SVG-1.1-SE/styling-css-04-f.svg: Added.
        * svg/custom/invalid-dasharray.svg: Added.
2011-06-07  Rob Buis  <rbuis@rim.com>

        Reviewed by Dirk Schulze.

        stroke-dasharray does not handle "none"
        https://bugs.webkit.org/show_bug.cgi?id=62203

        Use the initial strokeDashArray style for stroke-dasharray="none" to apply to SVGRenderStyle rather than bailing out.

        Tests: svg/W3C-SVG-1.1-SE/styling-css-04-f.svg
               svg/custom/invalid-dasharray.svg

        * css/SVGCSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applySVGProperty):


Canonical link: https://commits.webkit.org/77704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88266 268f45cc-cd09-0410-ab3c-d52691b4dbfc